--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,46 @@
 @import url('./reset.css');
 @import url('./1-timer.css');
 @import url('./2-snackbar.css');
+
+.menu {
+  margin: 20px auto;
+  text-align: center;
+  width: 350px;
+  box-shadow: 10px 10px 10px 0px #cccccc;
+  background-color: #fff;
+  border-radius: 8px;
+}
+
+.wrapper-menu {
+  padding: 20px;
+}
+
+.menu-header {
+  font-size: 50px;
+  margin-bottom: 10px;
+}
+.menu-list {
+  margin: auto;
+}
+.menu-item {
+  margin-bottom: 18px;
+  height: 40px;
+  border-radius: 8px;
+  border: solid rgb(130, 130, 130) 1px;
+  background-color: #fff;
+}
+
+.menu-item:hover,
+.menu-item:focus {
+  color: #e6e6e6;
+  background: #5680db;
+  border: solid #5680db 1px;
+}
+
+.menu-link {
+  font-size: 25px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  line-height: 40px;
+}
