--- a/src/css/1-timer.css
+++ b/src/css/1-timer.css
@@ -1,3 +1,5 @@
+@import url('./reset.css');
+
 .wrapper {
   width: 355px;
   margin: auto;
@@ -51,16 +53,20 @@
 .timer {
   display: flex;
   flex-direction: row;
-  gap: 48px;
+  gap: 24px;
+  align-items: flex-start;
 }
 .field {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 .value {
+  color: #2e2f42;
   font-size: 40px;
   line-height: 48px;
   letter-spacing: 1.6px;
 }
 .label {
+  text-transform: uppercase;
 }
