--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -60,3 +60,9 @@ body {
   height: 100%;
   line-height: 40px;
 }
+
+.label {
+  color: #2e2f42;
+  font-size: 16px;
+  line-height: 24px; /* 150% */
+}
